dark mode no results style --fix

--- a/assets/scss/layouts/_dark_mode.scss
+++ b/assets/scss/layouts/_dark_mode.scss
@@ -76,7 +76,7 @@
     }
   }
   .no-results {
-    background: $dark-2;
+    background: $dark-1;
   }
   h2.title-with-line {
     span,
@@ -1484,6 +1484,7 @@
     }
     &-slide {
       &-item {
+        background: $dark-2 !important;
         &-left {
           img {
             height: calc(100% + 1px);
